k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-service-v2
  labels:
    app: payments-service-v2
    version: v2
spec:
  selector:
    matchLabels:
      app: payments-service-v2
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: payments-service-v2
        version: v2
    spec:
      volumes:
      - name: kongapay-config
        configMap:
          name: kongapay-config
      imagePullSecrets:
      - name: default-secret
      containers:
      - image: swr.af-south-1.myhuaweicloud.com/kongapay/payments-service-v2:latest
        name: payments-service-v2
        imagePullPolicy: Always
        resources:
         requests:
           cpu: "800m"
           memory: "350Mi"
         limits:
           cpu: "1"
           memory: "400Mi"
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        volumeMounts:
        - name: kongapay-config
          mountPath: /creds/kongapay-config.json
          subPath: kongapay-config.json
