k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-service
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: payments-service
